<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".PresionActivity"
        android:background="@drawable/background_login"
        android:padding="15dp">

        <RelativeLayout
            android:id="@+id/preLayoutTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/preReturnMenu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_chevron_left_black_white"
                android:layout_centerVertical="true"/>
            <TextView
                android:id="@+id/preTitleNew"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/preTitleNew"
                android:layout_marginStart="17dp"
                android:layout_toEndOf="@+id/preReturnMenu"
                android:layout_centerVertical="true"
                android:textStyle="bold"
                android:textSize="25sp"
                android:textColor="@color/white"/>
            <Button
                android:id="@+id/savePresion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/savePresion"
                android:background="@drawable/button_save_presion"
                android:layout_centerVertical="true"
                android:textColor="@color/red"
                android:layout_alignParentEnd="true"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/preLayoutInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_register"
            android:layout_below="@+id/preLayoutTitle"
            android:layout_marginTop="20dp"
            android:padding="30dp">
            <TextView
                android:id="@+id/textPreDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/textPreDate"
                android:textColor="@color/presionGris"/>
            <TextView
                android:id="@+id/preDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_especial"
                android:layout_below="@+id/textPreDate"
                android:drawableEnd="@drawable/ic_today_black_24dp"
                tools:text="05 jul. 2021 - 11:12 a.m."
                android:textSize="18sp"
                android:textColor="@color/black"/>
            <RelativeLayout
                android:id="@+id/layoutSistólica"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/preDate"
                android:layout_alignParentStart="true">
                <TextView
                    android:id="@+id/textSistólica"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:text="@string/textSistólica"
                    android:textColor="@color/presionGris"/>
                <TextView
                    android:id="@+id/textSub1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/textSistólica"
                    android:text="@string/textSub1"
                    android:textColor="@color/presionGris"/>
                <EditText
                    android:id="@+id/newSistolica"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textSub1"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:paddingTop="6dp"
                    android:paddingBottom="6dp"
                    android:maxLength="3"
                    android:inputType="phone"
                    tools:text="190"
                    android:textSize="25sp"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:background="@drawable/rounded_edit_text"/>
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/layoutDiastólica"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/preDate"
                android:layout_centerHorizontal="true">
                <TextView
                    android:id="@+id/textDiastólica"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:text="@string/textDiastólica"
                    android:textColor="@color/presionGris"/>
                <TextView
                    android:id="@+id/textSub2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/textDiastólica"
                    android:text="@string/textSub2"
                    android:textColor="@color/presionGris"/>
                <EditText
                    android:id="@+id/newDiastolica"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textSub2"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:paddingTop="6dp"
                    android:paddingBottom="6dp"
                    android:maxLength="3"
                    android:inputType="phone"
                    tools:text="190"
                    android:textSize="25sp"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:background="@drawable/rounded_edit_text"/>
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/layoutPulso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/preDate"
                android:layout_alignParentEnd="true">
                <TextView
                    android:id="@+id/textPulso"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:text="@string/textPulso"
                    android:textColor="@color/presionGris"/>
                <TextView
                    android:id="@+id/textSub3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/textPulso"
                    android:text="@string/textSub3"
                    android:textColor="@color/presionGris"/>
                <EditText
                    android:id="@+id/newPulso"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textSub3"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:paddingTop="6dp"
                    android:paddingBottom="6dp"
                    android:maxLength="3"
                    android:inputType="phone"
                    tools:text="190"
                    android:textSize="25sp"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:background="@drawable/rounded_edit_text"/>
            </RelativeLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/preLayoutShow"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background_register"
            android:layout_below="@+id/preLayoutInput"
            android:padding="5dp"
            android:layout_marginTop="20dp">

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/lineChart"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </RelativeLayout>

    </RelativeLayout>
</layout>