<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:background="@drawable/background_login">

        <ImageView
            android:id="@+id/image"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/png_blanco_logoclinica"/>
        <TextView
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/textMain"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/gris"/>
        <Button
            android:id="@+id/buttonConsult"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_above="@+id/relativeLogin"
            android:layout_marginStart="48dp"
            android:layout_marginEnd="48dp"
            android:layout_marginBottom="55dp"
            android:background="@drawable/button_menu_ext"
            android:text="@string/buttonConsult"
            android:textColor="@color/red"
            android:textSize="20sp" />

        <RelativeLayout
            android:id="@+id/relativeLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true">
            <TextView
                android:id="@+id/question"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@+id/buttonGo"
                android:text="@string/questionLogin"
                android:textColor="@color/gris"
                android:gravity="center"
                android:layout_centerVertical="true"/>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/buttonGo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="25dp"
                android:layout_marginEnd="25dp"
                android:src="@drawable/ic_favorite_border_black_24dp"
                app:backgroundTint="#FFFFFF"/>
        </RelativeLayout>

    </RelativeLayout>
</layout>