<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    >
    <data>
    </data>
    <ScrollView
        android:layout_width="match_parent"
        android:background="@drawable/background_login"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            tools:context=".RegisterFacebookActivity"
            android:layout_height="match_parent"
            android:padding="15dp">

            <RelativeLayout
                android:id="@+id/relativeRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">
                <ImageView
                    android:id="@+id/returnRegister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_chevron_left_black_white"
                    android:layout_centerVertical="true"/>
                <TextView
                    android:id="@+id/titleRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Mis Datos"
                    android:layout_marginStart="17dp"
                    android:layout_toEndOf="@+id/returnRegister"
                    android:textStyle="bold"
                    android:textSize="25sp"
                    android:textColor="@color/white"/>
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/png_icono"
                    android:layout_alignParentEnd="true"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relativeBody"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/background_register"
                android:layout_below="@+id/relativeRegister"
                android:layout_marginTop="20dp">
                <EditText
                    android:id="@+id/regDocIdentity2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="30dp"
                    android:textColor="@color/black"
                    android:maxLength="12"
                    android:inputType="phone"
                    android:hint="@string/docR"
                    android:padding="15dp"
                    android:background="@drawable/rounded_edit_text"/>
                <EditText
                    android:id="@+id/regName2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/regDocIdentity2"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginEnd="30dp"
                    android:padding="15dp"
                    android:textColor="@color/black"
                    android:hint="@string/regName"
                    android:background="@drawable/rounded_edit_text"/>
                <EditText
                    android:id="@+id/regLastname2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/regName2"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginEnd="30dp"
                    android:textColor="@color/black"
                    android:hint="@string/regLastname"
                    android:padding="15dp"
                    android:background="@drawable/rounded_edit_text"/>
                <TextView
                    android:id="@+id/regDate2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/regLastname2"
                    android:clickable="false"
                    android:layout_alignParentStart="true"
                    android:hint="@string/regDate"
                    android:textSize="18sp"
                    android:gravity="center"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="25dp"
                    android:padding="15dp"
                    android:background="@drawable/rounded_edit_text"/>
                <EditText
                    android:id="@+id/regPhone2"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/regLastname2"
                    android:maxLength="9"
                    android:layout_alignParentEnd="true"
                    android:hint="@string/regPhone"
                    android:inputType="phone"
                    android:layout_marginTop="25dp"
                    android:layout_marginStart="200dp"
                    android:layout_marginEnd="30dp"
                    android:padding="15dp"
                    android:background="@drawable/rounded_edit_text"/>

                <EditText
                    android:id="@+id/regEmail2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/regDate2"
                    android:inputType="textEmailAddress"
                    android:hint="@string/regEmail"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginEnd="30dp"
                    android:textColor="@color/black"
                    android:padding="15dp"
                    android:background="@drawable/rounded_edit_text"/>

                <Button
                    android:id="@+id/buttonRegCreate2"
                    android:layout_width="170dp"
                    android:layout_height="50dp"
                    android:background="@drawable/button_red"
                    android:layout_below="@+id/regEmail2"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="30dp"
                    android:layout_marginStart="180dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="10dp"
                    android:text="Guardar"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:textSize="15sp"/>

            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>

</layout>