<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background_login"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".LoginActivity"
            >
            <ImageView
                android:id="@+id/returnMain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_close_black_white"
                android:layout_margin="25dp"/>

            <ImageView
                android:id="@+id/image"
                android:layout_width="200dp"
                android:layout_height="180dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/png_blanco_logoclinica"/>

            <TextView
                android:id="@+id/textLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textLogin"
                android:layout_below="@+id/image"
                android:layout_centerHorizontal="true"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="@color/white"/>

            <EditText
                android:id="@+id/loginUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textLogin"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="30dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/rounded_edit_text"
                android:hint="@string/hintLoginUser"
                android:padding="17dp"
                android:textColor="@color/black"
                android:inputType="phone"
                android:maxLength="12"/>

            <EditText
                android:id="@+id/loginPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/loginUser"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/rounded_edit_text"
                android:hint="@string/hintLoginPass"
                android:inputType="textPassword"
                android:padding="17dp"
                android:textColor="@color/black"
                android:maxLength="35"/>

            <CheckBox
                android:id="@+id/idcheckorecordar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/loginPass"
                android:layout_marginTop="11dp"
                android:layout_marginLeft="25dp"
                android:text="Recordar"
                android:textColor="#FFFFFF">
            </CheckBox>

            <LinearLayout
                android:layout_below="@+id/loginPass"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_marginTop="30dp"
                android:padding="29dp"
                android:id="@+id/conterbuttons"
                android:layout_height="wrap_content"
                android:weightSum="2">

                <Button
                    android:id="@+id/buttonLogin"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="50dp"
                    android:layout_below="@+id/loginPass"

                    android:background="@drawable/button_menu_ext"
                    android:text="@string/buttonLogin"
                    android:textColor="#882727"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/buttonRegister"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_below="@+id/loginPass"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/buttonRegister"
                    android:textColor="@color/white"
                    android:textSize="17sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_below="@+id/conterbuttons"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_height="wrap_content">
                <com.google.android.gms.common.SignInButton
                    android:id="@+id/sign_in_button"
                    android:text="Continuar con Google"
                    android:layout_marginLeft="28dp"
                    android:layout_marginRight="28dp"
                    android:contentDescription="Continuar con Google"
                    android:layout_centerHorizontal="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <!-- blue button

                <com.google.android.gms.common.SignInButton
                    android:id="@+id/signin1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:colorScheme="dark" /> -->
                <com.facebook.login.widget.LoginButton
                    android:id="@+id/login_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="32dp"
                    android:layout_marginRight="32dp"
                    android:layout_marginBottom="10dp" />
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</LinearLayout>